--- a/序：我的考研之路.md
+++ b/序：我的考研之路.md
@@ -8,7 +8,7 @@
 
 在本科的前两年，我在人生的大方向上浪费了非常多时间。我嗜睡、打王者荣耀、花大把大把的时间上课、低质量社交，相当于延续了高中随波逐流的状态两年之久。尽管碍于认知水平，这种浑浑噩噩的迷茫状态无法避免，但这依旧是足以令我惋惜的时光。因为本科的环境无疑是绝无仅有的自由时光，既没有高中令人窒息的作息时间表，也没有在步入社会（研究生也属于社会人）之后繁复的社交关系。最自由的本科生涯只适合做两件事情：野蛮地探索；野蛮地积累。
 
-作为一个特立独行的人，我的主观能动性在自由中觉醒。本科管得松，我在醒着的时候就看小说、打游戏、刷知乎、和小姐姐聊天。知乎让我看见了更大的世界：清华大学的曾加、白如冰、灵剑、陈然、北冥乘海生；心理学的动机在杭州、李松蔚、KnowYourself；张佳玮、微调、司马懿、刘锐、苏澄宇……我慢腾腾地探索，勉强完成了“见天地”和“见众生”的积累。这些与考研有什么关系呢？第一，信心的积累。虽然我知道考研有手就行，但我考什么哪个学校的哪个专业呢？要是从一个坑跳向另一个坑，还不如躺在原来的坑里，别瞎折腾。对于应试的自信并不足以解决面向未知的恐惧，但看着各行各业的（伪）大佬谈笑风生，我就觉得我行了。第二，认知的积累。在见天地的报菜名中，此前的探索使我遍历了所有的菜，权衡了理想与现实，选定了：华中科技大学电气工程。
+作为一个特立独行的人，我的主观能动性在自由中觉醒。本科管得松，我在醒着的时候就看小说、打游戏、刷知乎、和小姐姐聊天。知乎让我看见了更大的世界：清华大学的曾加、白如冰、灵剑、陈然、北冥乘海生；心理学的动机在杭州、李松蔚、KnowYourself；张佳玮、微调、司马懿、刘锐、苏澄宇……我慢腾腾地探索，勉强完成了“见天地”和“见众生”的积累。这些与考研有什么关系呢？第一，信心的积累。虽然我知道考研有手就行，但我考哪个学校的哪个专业呢？要是从一个坑跳向另一个坑，还不如躺在原来的坑里，别瞎折腾。对于应试的自信并不足以解决面向未知的恐惧，但看着各行各业的（伪）大佬谈笑风生，我就觉得我行了。第二，认知的积累。在见天地的报菜名中，此前的探索使我遍历了所有的菜，权衡了理想与现实，选定了：华中科技大学电气工程。
 
 假如刚入学就思考“我到底需不需要考研？如果需要，考哪里？”，你至少可以早一年醒悟。一年可是四分之一（医学生除外）的本科生涯啊！上述支离破碎的歪理bug太多。首先，大一是否足以择业？其次，两年的缓步探索被大三的一个瞬间彻底否定（改考CS）了，探索所得结果的意义何在？对于弯路、成败的探讨，前文已经足够多了；后文亦将从各个角度出发，或激起、或维护每个勇者有过的勇敢，或治愈失败者的求而不得。很多时候，答案与过程相关。讲一个小故事：
 
@@ -30,7 +30,7 @@
 
 ## 0x02 中流985计算机
 
-决定跨考CS非常偶然，源于一个改变命运的瞬间（跨考CS与否是截然相反的两条道路，前者开启了一路上行的中二之旅；后者迈入了小富则安的佛系人生，还未认真地年轻便早已认真地老去）：我打开了曾博的微信公众号。我甚至找到了那篇短短的旧文：微信公众号“勃学”在2019年1月10日发布的《论程序员成就之天梯排行榜》。
+决定跨考CS非常偶然，源于一个改变命运的瞬间（跨考CS与否是截然相反的两条道路，前者开启了一路上行的中二之旅；后者迈入了小富则安的佛系人生，还未认真地年轻便已认真地老去）：我打开了曾博的微信公众号。我甚至找到了那篇短短的旧文：微信公众号“勃学”在2019年1月10日发布的《论程序员成就之天梯排行榜》。
 
 ## 0x03 一战上海交通大学计算机
 
