改完了序和上篇的政治和英语。

--- a/上篇：初试方法论/1. 考研政治.md
+++ b/上篇：初试方法论/1. 考研政治.md
@@ -1,82 +1,84 @@
 ## 0x00 阅读须知
 
 我参加了2020考研和2021考研，报考专业均为上海交通大学计算机系专硕（大数据方向）。
-+ 2020考研：目标70+，估分77 = 44 + 33，成绩79 = 44 + 35。
-+ 2021考研：目标75+，估分80 = 43 + 8 + 7 + 7.5 + 7.5 + 7，成绩80 = 43 + 37。
 
-若论裸考的知识储备，我是所有考生中最差的之一。因为我只考过开卷的思修，在大一下转入理科试验班之后，我不需要学马原、毛概、史纲，更别提什么闭卷考试了。我说我负基础并不为过。但是，我并不打算像以写考研经验贴为生的营销号一样鼓吹自己的起点多低，靠着临考突击得到了上海地区让人眼红的考研政治分数。首先，我扯皮的能力非常强。哪怕不背肖4，我综合题照样可以30+。此外，我的学习能力很强。这篇经验贴旨在向大家提供我推荐的考研政治备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略所提到的学习任务。鉴于个人水平有限，欢迎大家在评论区里讨论或友善质疑。若确实帮到了你，也可以在评论区里还愿，并点赞、转发，让更多的人看到。
+- 2020考研：目标70+；估分77 = 44 + 33；成绩79 = 44 + 35。
+- 2021考研：目标75+；估分80 = 43 + 8 + 7 + 7.5 + 7.5 + 7；成绩80 = 43 + 37。
 
-## 0x01 备考攻略
+论裸考的知识储备，我是在所有考生中最差的人之一。因为我只考过开卷的思修，在大一下转入理科试验班之后，我不需要学马原、毛概、史纲，更别提闭卷考试了。我说我负基础并不为过。但是，我并不打算鼓吹自己的起点多低，靠着临时抱佛脚得到了上海地区让人眼红的考研政治分数。我的扯皮能力非常强。哪怕不背肖4，我综合题也可以30+。此外，我的学习能力很强。这篇经验贴旨在提供我所推荐的考研政治备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略的学习任务。
 
-### 1. 约9/1→10/10：徐涛的强化班
+## 0x01 方法论
+
+### 1. 约09-01 → 10-10：徐涛の强化班
 
 2021考研：徐涛的强化班总时长约60h，1.5倍速，40h听完。每天1h，共40天。
 
-本阶段结束后的目标是60+分。直接使用徐涛的核心考案即可，不需要肖秀荣的精讲精练。
+本阶段的目标是60+分。徐涛的核心考案即可，不需要肖秀荣的精讲精练。
 
-具体的学习方法：跟着徐涛的课，在核心考案上圈圈划划（好像有三四种颜色标记重点、难点、非重点）。知识点具体分成哪几类，徐涛课上都会讲。我个人觉得，徐涛的强化课讲得无可挑剔。跟着他的节奏走就行。
+**具体的学习方法**：跟着徐涛的课，在核心考案上圈圈划划（好像有三种颜色标记重点、难点、非重点）。我个人觉得，徐涛的强化课讲得无可挑剔。跟着他的节奏就行。
 
-理想的学习效果
-+ 了解考研政治的大致框架：总共几科？分数占比如何？每科分为哪些部分（章节）？
-+ 了解每个科目的重点：三规律五范畴；四个全面五位一体；道德和法律等。
-+ 了解每个学科的脉络：怎么从马哲和马政经到科社？习思想的四个全面和五位一体；史纲的时间线。
+**理想的学习效果**：
 
+- 了解考研政治的大致框架：总共几科？分数占比如何？每科分为哪些部分（章节）？
+- 了解每个科目的重点：马原的三规律五范畴；毛中特的四个全面五位一体；思修法基的道德和法律；等等。
+- 了解每个学科的脉络：从马哲到马政经再到科社；习思想的四个全面和五位一体；史纲的时间线；等等。
 
+**注意事项**：
 
-注意事项
-+ 别停下来做笔记，从头到尾放一遍，尽量认真听就行了，尤其是马哲。
-+ 给每个考点做一下标记，主要是为了提高听课效率；后续复习也可以快速过一下。
-+ 不需要背诵！不需要背诵！不需要背诵！徐涛的强化课搭的是知识的框架。
+- 别停下来做笔记，从头到尾放一遍，尽量认真听就行了，尤其是马哲。
+- 给每个考点做一下标记，主要是为了提高听课效率；后续复习也可以快速地过一下。
+- 不需要背诵！不需要背诵！不需要背诵！徐涛的强化课搭的是**知识**的框架。
 
-### 2. 约10/11→10/31：陆寓丰的技巧班
+### 2. 约10-11 → 10-31：陆寓丰の技巧班
 
 2021考研：陆寓丰的技巧班，总时长约40h，2倍速，20h听完。每天1h，共20天。
 
 本阶段结束后的目标是70+分。
 
-具体的学习方法
-+ 选择题：跟着陆寓丰做配套讲义的练习题即可。
-+ 综合题：听陆寓丰的讲解，形成自己组织综合题答案的模式。如果你真的无从下手，那就全听陆寓丰的。
+**具体的学习方法**
 
+- 选择题：跟着陆寓丰做配套讲义的练习题即可。
+- 综合题：听陆寓丰的讲解，形成组织综合题答案的模式。如果无从下手，你就学习陆寓丰的套路。
 
+**理想的学习效果**
 
-理想的学习效果
-+ 选择题：单选题不必多说，全靠第4阶段的背诵；关键是形成做多选题的感觉。比如，双选三选四选的分布（马哲几乎必有双选，三选最多，四选大多出现在毛中特和形策）、模棱两可的选项选还是不选。
-+ 综合题：每个科目的答题模板（分点、原理＋结合材料；总结句）；怎么从材料中提炼踩分点？
+- 选择题：单选题不必多说，全靠第4阶段的背诵；关键是形成做多选题的感觉。比如，双选三选四选的分布（马哲几乎必有双选，三选最多，大部分的四选在毛中特和形策中）、模棱两可的选项选还是不选。
+- 综合题：每个科目的答题模板（分点、原理 + 结合材料；总结句）；怎么从材料中提炼踩分点？
 
+**注意事项**
 
+- 别光听，动手做选择题；动手写分析题，不用完完整整地写，可以写几个关键词代表踩分点。
+- 不需要背诵！不需要背诵！不需要背诵！陆寓丰的技巧课搭的是**应试**的框架。
 
-注意事项
-+ 别光听，动手做选择题；动手写分析题，不用完完整整地写，可以只写几个关键词代表踩分点。
-+ 不需要背诵！不需要背诵！不需要背诵！陆寓丰的技巧课搭的是应试的框架。
-
-### 3. 约11/1→11/10：肖秀荣的1000题
+### 3. 约11-01 → 11-10：肖秀荣的1000题
 
 每天1h，刷10天。只刷选择题，能刷多少是多少。
 
-优先级：多选题＞单选题。对于多选题，每个学科都得刷一些；对于单选题，毛中特可刷可不刷。最重要的是马哲和毛中特的多选题，其次是史纲的多选题，再次是史纲的单选题，然后才是其他。
+优先级：多选题 > 单选题。对于多选题，每个学科都刷一些；对于单选题，毛中特可刷可不刷。最重要的是马哲和毛中特的多选题，其次是史纲的多选题，再次是史纲的单选题，最后是其它。
 
-具体的学习方法：刷题，对答案，知道自己错在哪里就行。
+**具体的学习方法**：刷题，对答案，知道哪里错了就行。
 
-理想的学习效果：形成并印证每个学科的题感，实际运用一下陆寓丰技巧课所讲的理论。
+**理想的学习效果**：形成并印证每个学科的题感，实际运用一下陆寓丰技巧课所讲的理论。
 
-注意事项：不需要背诵！不需要背诵！不需要背诵！做肖秀荣的1000题只是为了找题感。
+**注意事项**：不需要背诵！不需要背诵！不需要背诵！做肖秀荣的1000题只是为了找**题感**。
 
-### 4. 约11/11→12/25：模拟卷
+### 4. 约11-11 → 12-25：模拟卷
 
-每天2h，持续45天。重中之重在于肖8肖4。
+每天2h，持续45天。重中之重在于**肖8肖4**。
 
 本阶段结束后的目标是75+分。
-+ 其他模拟卷：只刷选择题，刷一遍就好。错了的单选可以稍微背一背，多选就算了。
-+ 肖8：只刷选择题，反复刷，刷到“一分钟可以做完一套，而且满分”为止。
-+ 肖4：选择题反复刷，刷到“一分钟可以做完一套，而且满分”为止。；综合题按陆寓丰技巧班的思路整理肖4，背熟前2套，看熟后2套。我将以2023的肖4为例，具体演示如何整理肖4。
 
-具体的学习方法：刷题，对答案，既要知道对的选项为什么对，也要知道错的选项为什么错（肖8肖4）。
+- **其它模拟卷**：只刷选择题，刷一遍就好。错了的单选可以稍微背一背，多选就算了。
+- **肖8**：只刷选择题，反复刷，刷到“**一分钟可以做完一套，而且满分**”为止。
+- **肖4**：选择题反复刷，刷到“一分钟可以做完一套，而且满分”为止；综合题按照陆寓丰技巧班的套路整理肖4，**背熟前2套，看熟后2套**。
 
-理想的学习效果：一分钟可以做完一套肖8肖4，而且满分。
+**具体的学习方法**：刷题，对答案，既要知道对的选项为什么对，也要知道错的选项为什么错（肖8肖4）。
 
-注意事项：狂背肖8肖4！狂背肖8肖4！狂背肖8肖4！
+**理想的学习效果**：一分钟可以做完一套肖8肖4，而且满分。
+
+**注意事项**：狂背肖8肖4！狂背肖8肖4！狂背肖8肖4！
 
 ## 0x02 建议
-+ 学习能力和执行能力因人而异，请根据自身情况稍作调整。
-+ 盗版课程和书籍的电子扫描版满天飞，大家可以先找盗版课程听一听、盗版书籍看一看，省得花冤枉钱。如果认为物有所值，且经济实力允许，请支持正版。
+
+- 学习能力和执行能力因人而异，请根据自身情况稍作调整。
+- 盗版课程和书籍的电子扫描版满天飞，大家可以先找盗版课程听一听、盗版书籍看一看，别花冤枉钱。如果认为物有所值且经济实力允许，请支持正版。
