--- a/上篇：初试方法论/3. 考研数学.md
+++ b/上篇：初试方法论/3. 考研数学.md
@@ -1,10 +1,19 @@
 ## 0x00 阅读须知
 
-鉴于某些同学已然开始备战2023-12考研初试，而且11408的重中之重正是数学一和408，我先行提供一份较为粗糙的备考策略。
+我参加了2020考研和2021考研，报考专业均为上海交通大学计算机系专硕（大数据方向）。
 
-数学一和408的备考攻略不比前文（政治和英语）详尽，暂以学科的主要矛盾出发。相关内容可能再次更新，或者在考研杂谈中补充说明。
+- 2020考研：估分102；成绩93。
+- 2021考研：目标130+；估分133 = 150 - 5 - 5 - 7；成绩137。
 
-## 0x01 备考攻略
+吉林大学（末流985）：高数上92分；高数下85分；线代82分；概率论95分。在考研生中，我认为我的数学基础既好，又不好。**关于好**：中小学全凭数学撑场面，小学鲜有敌手，初中无敌手；高中考过满分，全国高中数学联赛省级二等奖；连“高数上错了第一道和第六道选择题、概率论错了第六道选择题，三道题的错因”这种陈年细节都记得，本科学了很多数理课程；我自认为，我对数学知识的理解较为深刻。**关于不好**：高考只考了117分；考研一战只考了93分；不擅长考试，心态和发挥特别不稳定。
+
+> 注：数学在本文的含义均指考研数学。
+
+对于考研初试，我的自信源泉在于数学。但经过考研一战的惨败，我才清晰且准确地认识了我的数学水平：我喜欢数学，主动学习使得我的数学思维、数学思想、数理逻辑足够强，但我的数学应试能力非常弱，凭着主动学习在简单考试中所向无敌；在困难考试中飘忽不定。
+
+数学是一门方差极大的学科，这个方差既指考生之间的方差，又指考生个人的方差。就内容而言，本文无法给出像考研政治和考研英语一样的学习计划。所以，本文对于数学的分析居多，但依旧提供了一套个人较为推荐的备考方案。
+
+## 0x01 方法论
 
 数学一の核心备考原则：10次模考，110分；20次模考，120分；30次模考，130分。
 
