02-18：改完了“上篇：初试方法论/4. 计算机学科专业基础综合”。

--- a/1. 初试方法论/4. 计算机学科专业基础综合.md
+++ b/1. 初试方法论/4. 计算机学科专业基础综合.md
@@ -1,41 +1,42 @@
 ## 0x00 阅读须知
 
-鉴于某些同学已然开始备战2023-12考研初试，而且11408的重中之重正是数学一和408，我先行提供一份较为粗糙的备考策略。
+我参加了2020考研和2021考研，报考专业均为上海交通大学计算机系专硕（大数据方向）。
 
-数学一和408的备考攻略不比前文（政治和英语）详尽，暂以学科的主要矛盾出发。相关内容可能再次更新，或者在考研杂谈中补充说明。
+- 2020考研：估分91；成绩86。
+- 2021考研：目标125+；估分125 = 70 + 14 + 21 + 13 + 7；成绩122。
 
-## 0x01 备考攻略
+我的408一般，和考研英语的层次差不多。在任何院校的任何专业中，上海地区408 122分的实力可以做到不拖初试的后腿（比上不足，比下有余）。作为一名跨考生，我认为下述简单且粗暴的方法论几乎是最高效的备考攻略之一。但是，清北华五、好好学习、没有保研资格的科班生也许可以在更少的轮次下得到更高的分数。此外，还有一些跨考大佬（顶配学习力）可能以下述攻略的改良版获得更高的效率。因此，我的建议是，如果你认为你的学习力在我之下，抄作业；否则，参考后续文章（比如主要矛盾、学习曲线）关于408的分析即可。值得提醒的是，与大部分专业课不同，408是杂揉了四门专业课，知识点又多又杂又细又碎的巨无霸学科。如果你是跨考生，而且目标是清北华五的纯计算机系，务必将408作为考研初试的主要矛盾（对，它比数学更重要）。
 
-408の核心备考原则：【王道单科书 + 真题】，2遍120、3遍130。
+## 0x01 方法论
 
-408的备考攻略简单粗暴：以【DS → 计组 → OS → 计网】的顺序，刷完王道单科书；以年份递增的顺序，刷完真题。
+- **核心原则**：王道单科书 + 真题，2遍120、3遍130。
+- **备考过程**：以【DS → 计组 → OS → 计网】的顺序，刷完王道单科书；以年份递增的顺序，刷完真题。反复执行以上过程。
 
 ### 1. 王道单科书
 
 看一章知识点，刷一章课后题。
 
-注意事项：
+**注意事项**：
 
 - 一般来说，选择题的正确率不低于75%，学习状态正常。若低于75%，有必要反省一下自己是不是没有认真地看书。
-- 第1遍：可以只刷选择题，跳过综合题。
-- 第2遍或第3遍：综合题也得刷，但只需要刷综合题的真题。
+- 第1遍：可以跳过综合题；第2+遍（多多益善）：刷综合题，但只需要刷综合题的真题。
 
 ### 2. 真题
 
 按照考试时间，模考。
 
-注意事项：
+**注意事项**：
 
-- 第1遍：做不动综合题很正常，不需要在意分数。在订正的时候，将每道综合题当作例题，认认真真地看一遍。
-- 第2遍：在第1遍真题和第2遍王道单科书的洗礼下，总分应该不低于120分。若低于120分，有必要反省一下自己的学习效率。
-- 第3遍：总分应该不低于140分。若低于140分，有必要反省一下自己的学习效率。
-- 近五年真题：12月，5场模考，总分应该不低于135分（2遍）或145分（3遍）。
+- 第1遍：做不动综合题正常，不需要在意分数。在订正的时候，将每道综合题当作例题，认认真真地学一遍。
+- 第2遍：在第1遍真题和第2遍王道单科书的洗礼下，总分应该不低于120分。若低于120分，有必要反省一下自己的学习效果。
+- 第3遍：总分应该不低于140分。若低于140分，有必要反省一下自己的学习效果。
+- 近五年真题：12月，5场模考，总分应该不低于135分（学了2遍）或145分（学了3遍）。
 
-## 0x02 补充
+## 0x02 补充说明
 
-- 王道单科书相配套的学习模式是错题本；真题相配套的学习模式是总结。一些通用的学习模式和学习理念，我将在杂谈篇详述。在那之前，按照你自己的学习方式完成上述学习任务。
-- 综合题の学习方法：除了上述学习任务，还有必要“系统地”总结408的大题。比如，某个周末总结一下历年DS的算法题（其它大题亦同）。408大题的特色是“恶心”，尤其计组。但是，只要反反复复地做3遍以上，套路还是非常明显的。
-- 所谓的“指定教材”：如果尚在大一大二，我建议你把四大基础课好好地学一遍，否则，考研期间也不需要对着“指定教材”学一遍。关于“指定教材”和“黑皮书系列”，我可能在“考研杂谈：理论分析”中详述。
-- 王道の8套模拟卷：如果你的执行力不错，完成3遍【王道单科书 + 真题】，不说绰绰有余，学有余力应该不成问题。你可以模考8次，但12月必须通过近五年真题的5场模考重拾题感。说实话，模拟卷的质量太差，正如王道单科书的综合题，既不像真题，也押不中考点。王道模拟卷最大的优点是简单，动辄135+甚至140+，可以让你信心倍增。
-- 王道の考点分析（真题册の附赠）：反复地看，把它当成是一份完美的真题总结笔记。你甚至可以不断地完善它（比如，在旁边的空白处写上每个考点对应的题号和总分值（考频）、缺漏的知识点）。
-- 王道の思维导图：比较鸡肋，12月可以从王道单科书转向思维导图，查漏补缺。
+- 王道单科书相配套的学习模式是错题本；真题相配套的学习模式是总结。一些通用的学习模式和学习理念，我将在考研杂谈篇中详述。
+- **综合题/学习方法**：除了上述学习任务，还有必要“系统地”总结408的大题。比如，某个周末总结一下历年DS的算法题（其它大题亦同）。408大题的特色是“恶心”，尤其计组。但是，只要反反复复地做3遍以上，套路还是非常明显的。
+- **所谓的“指定教材”**：如果尚在大一大二，我建议好好地学一遍四大基础课（参考[CS DIY](https://csdiy.wiki/)），否则，考研期间不需要对着“指定教材”学一遍。关于“指定教材”和“黑皮书系列”，我将在“考研杂谈：学习曲线”中详述。甩一个简单粗暴的结论，看到别人使用严蔚敏、唐朔飞等人的所谓“指定教材”备考，你就偷着乐吧。
+- **王道/8套模拟卷**：如果你的执行力不错，完成3遍“王道单科书 + 真题”（第1轮不超过三个月；第2+轮不超过两个月），不说绰绰有余，学有余力应该不成问题。所谓学有余力，等于可以腾出时间精力折腾其它学习材料。对于王道的8套模拟卷，你可以模考8次，但12月必须通过近五年真题的5场模考重拾题感。说实话，王道模拟卷的质量很差（因为不可能存在哪个辅导机构拥有考研命题组级别的阵容），和王道单科书的综合题一样，既不像真题，也押不中考点。王道模拟卷最大的优点是简单，动辄135+甚至140+，可以让你信心倍增。
+- **王道/考点分析（王道的真题解析/附赠）**：反复地看，把它当成是一份完美的真题笔记。你甚至可以不断地完善它。比如，在旁边的空白处写上每个考点对应的题号和总分值（考频）、缺漏的知识点。
+- **王道/思维导图**：比较鸡肋，12月可以从王道单科书转向思维导图，查缺补漏。对知识点的脑补能力越强，学习效果越好，否则即为缺漏。
