--- a/1. 初试方法论/2. 考研英语.md
+++ b/1. 初试方法论/2. 考研英语.md
@@ -1,4 +1,4 @@
-## 0x00 阅读须知
+## 0x01 阅读须知
 
 我参加了2020考研和2021考研，报考专业均为上海交通大学计算机系专硕（大数据方向）。
 
@@ -7,31 +7,31 @@
 
 四级487分；六级481分。这英语基础不算好，但也不算特别差。2021年的英语一很难，75分还行。在任何院校的任何专业中，上海地区英语一75分的实力可以做到不拖初试的后腿（比上不足，比下有余）。如果英语一考75分左右就心满意足了，请继续往下看。如果托福100+，或者目标80+，这篇文章对你可能没什么帮助。这篇经验贴旨在提供我所推荐的考研英语一备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略的学习任务。
 
-## 0x01 方法论
+## 0x02 方法论
 
-### 0. 全程：单词
+### 1. 全程：单词
 
 每天0.5h。可以使用扇贝单词，或者使用墨墨背单词。个人最推荐的方法，详见附录。不推荐的方法：罗列了考研英语5500词的词汇书，比如绿宝书乱序版；百词斩。
 
-### 1. 约03-01 → 06-30：考研生词本（阅读理解）
+### 2. 约03-01 → 06-30：考研生词本（阅读理解）
 
 每天1h。笔译近10年的真题，对照译文，创建考研生词本，详见附录。
 
-### 2. 约07-01 → 07-31：客观题（近10年真题）
+### 3. 约07-01 → 07-31：客观题（近10年真题）
 
 隔天2.5h。其中，模考2h，失分报告0.5h。
 
 - **模考**：阅读理解 → 新题型 → 完形填空。掐表做题，没做完就没做完。
 - **失分报告**：丢了什么分？写错因和纠错笔记。在0.5h内总结，没写完就没写完。在下次模考之前，看一下上次模考的失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
 
-### 3. 约08-01 → 08-31：客观题（近10年真题）
+### 4. 约08-01 → 08-31：客观题（近10年真题）
 
 隔天2.5h。其中，模考2h，失分报告0.5h。
 
 - **模考**：阅读理解 → 新题型 → 完形填空。掐表做题，没做完就没做完。
 - **失分报告**：丢了什么分？写错因和纠错笔记。在0.5h内总结，没写完就没写完。如果此前的任务（包括背单词）好好执行，8月的失分报告和7月的失分报告有所不同。在下次模考之前，看一下上次模考所对应的两份失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
 
-### 4. 约09-01 → 09-30：主观题
+### 5. 约09-01 → 09-30：主观题
 
 每天1h。我只有三个建议：
 
@@ -41,32 +41,32 @@
 
 在3月到8月期间，如果每天花2h学习英语一，在完成既定任务的情况下，还剩很多时间。对于主观题的学习，你可以参考其它经验，比如[BenLucas](https://www.zhihu.com/people/lucas-antony)。虽然我在主观题上花了一些时间，但说实话，完全是因为太闲了。我个人觉得花不花那些时间都无所谓，因为主观题5 + 5 + 10确实很容易。我一战主观题20分左右，二战主观题24分。为什么主观题摆烂，反而高了几分？因为：我一战英语一没做完，翻译写了三道半；我二战没被作文模板忽悠，通过实际行动告诉阅卷人：我菜我认了，也知道模板骗不了您。但是，看在字迹工整的份上，求求您给我一半分叭！
 
-### 5. 约10-01 → 10-31：近10年真题
+### 6. 约10-01 → 10-31：近10年真题
 
 以2天为一个周期。第1天：模考3h；第2天：失分报告1h。
 
 - **模考**：小作文 → 大作文 → 阅读理解 → 新题型 → 完形填空 → 翻译。掐表做题，没做完就没做完。
 - **失分报告**：在1h内总结，没写完就没写完。在10月之前，必须确定一个相对稳定的目标总分以及每种题型的目标小分。基于此，微调目标总分在每种题型上的分配。若每种题型的目标小分已经相对稳定，写未达标题型的错因和纠错笔记即可（无视已达标题型的失分）。在下次模考之前，看一下上次模考的失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
 
-### 6. 约11-01 → 11-30：近10年真题
+### 7. 约11-01 → 11-30：近10年真题
 
 以2天为一个周期。第1天：模考3h；第2天：失分报告1h。
 
 - **模考**：小作文 → 大作文 → 阅读理解 → 新题型 → 完形填空 → 翻译。掐表做题，没做完就没做完。
 - **失分报告**：在1h内总结，没写完就没写完。写未达标题型的错因和纠错笔记即可（无视已达标题型的失分）。在下次模考之前，看一下上次模考那张试卷所对应的两份失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
 
-### 7. 约12-01 → 12-15：近5年真题
+### 8. 约12-01 → 12-15：近5年真题
 
 以2天为一个周期。第1天：模考3h；第2天：失分报告1h。
 
 - **模考**：小作文 → 大作文 → 阅读理解 → 新题型 → 完形填空 → 翻译。掐表做题，没做完就没做完。
 - **失分报告**：在1h内总结，没写完就没写完。综合地分析所有失分点：需要争取哪些失分点？如何争取？
 
-### 8. 约12-16 → 12-25：沉着备考创佳绩
+### 9. 约12-16 → 12-25：沉着备考创佳绩
 
 保持手感，稳住心态。
 
-## 0x02 建议
+## 0x03 建议
 
 - 学习能力和执行能力因人而异，请根据自身情况稍作调整。
 - 盗版课程和书籍的电子扫描版满天飞，大家可以先找盗版课程听一听、盗版书籍看一看，别花冤枉钱。如果认为物有所值且经济实力允许，请支持正版。
@@ -107,15 +107,15 @@
 
 > 词典见[Issues #4](https://github.com/Anticorianderist/kaoyan/issues/4)。
 
-![img](https://picx.zhimg.com/80/v2-d6b5669abc129c18173ff1e0194cd5e4_720w.jpeg?source=d16d100b)
+![eudb_cn]()
 
-![img](https://pic3.zhimg.com/80/v2-58d95f0ad93ca800211ce633e85e56cd_720w.jpeg?source=d16d100b)
+![abandon]()
 
 **第3步**：创建默认生词本——考研生词本。
 
 #### B. 笔译
 
-![img](https://picx.zhimg.com/80/v2-83679e7c4a69f3256d8e0433abd3a3ab_720w.jpeg?source=d16d100b)
+![2021年考研英语一の第1篇阅读理解（节选）]()
 
 以2021考研英语一为例，考虑到大家英语基础各不相同，我装作不认识某些单词，便于演示后续过程。
 
@@ -146,7 +146,7 @@
 4. rank 6001-8000为2星
 5. rank ＞8000为1星
 
-![img](https://pic1.zhimg.com/80/v2-c418c02ee6705860d3c60b1f94674e18_720w.jpeg?source=d16d100b)
+![sound]()
 
 #### D. 背诵
 
@@ -154,7 +154,7 @@
 
 **将学习计划设置为一个无法完成的目标**，比如500个，每天背诵考研生词本0.5h（具体的背诵时长根据英语基础和目标自行调整）。
 
-![img](https://pic2.zhimg.com/80/v2-3683fbec3e21f4724548a3481636cb02_720w.jpeg?source=d16d100b)
+![设置学习计划]()
 
 #### E. 循环
 
