02-18：改完了“考研杂谈/成败”。

--- a/2. 考研杂谈/1. 成败.md
+++ b/2. 考研杂谈/1. 成败.md
@@ -1,46 +1,41 @@
-## 0x01 失败：re-definition
-+ 传统的考研失败：没书读了。
-+ 我认为的考研失败：“选择考研的人生”比“不选择考研的人生”更糟糕。
+## 0x01 失败：re-define
 
-你可以仔细想想，到底是我的定义更合理，还是传统的定义更合理？我举几个例子，想必它们能让你感受出二者的显著区别。
-+ 传统的考研成功，我认为的考研失败：考上了研，但选了一个很糟糕的导师，因为抑郁自杀了。
-+ 传统的考研成功，我认为的考研成功：考上了研，研究生生活大致如自己所料，求仁得仁。
-+ 传统的考研失败，我认为的考研成功：考研付出的时间精力没有转化为录取通知书，但培养了“自律、积极向上、接受得失”等优秀品质。
-+ 传统的考研失败，我认为的考研失败：没考上研，心灰意冷地找了个工作，混吃等死。
+- **传统的考研失败**：没书读了。
+- **我认为的考研失败**：“选择考研的人生”比“不选择考研的人生”更糟糕。
 
-对此，我想对勇敢且努力的失败者多说几句：有的人目标很低，轻松地考上了；你考名校，不幸落榜了。但你要知道，你选择了一条更困难的路，你比别人更勇敢；你为之付出了足够的时间精力，你比别人更努力。所以，你比他们更优秀。更优秀的人反而没书读？如果能从失败中吸取教训，纠正自己的认知，你迟早会成功，比他们成功。无论是学历，还是未来的方方面面。
+你可以仔细想想，到底是传统的定义更合理，还是我的定义更合理？举几个例子，想必它们可以让你感受二者的显著区别。
 
-我不是在灌鸡汤。人生有无数个选择，每个人都会收敛于自己的数学期望（据大数定律）。比如，你考名校的收益是100，录取的概率为80%；他考本校的收益是70，录取的概率为100%。继续保持你的勇敢、努力与昂扬，你最终的收益必然收敛于80，而他则会收敛于70。怕就怕未被录取让你否认了勇敢这一优秀品质，进而否定自己比他们优秀的事实，最终通过自暴自弃让原本不实的论断成真。这不是很可悲吗？
+- **传统的考研成功，我认为的考研失败**：考上了研，但选了一个非常糟糕的导师，因为抑郁症自杀了。
+- **传统的考研成功，我认为的考研成功**：考上了研，研究生生活大致如自己所料，求仁得仁。
+- **传统的考研失败，我认为的考研成功**：考研所付出的时间精力没有转化为录取通知书，但培养了“自律、积极向上、接受得失”等优秀品质。
+- **传统的考研失败，我认为的考研失败**：没考上研，心灰意冷地找了个工作，混吃等死。
+
+对此，我想对**勇敢且努力**的失败者多说几句：有的人目标很低，轻松地上岸了；你的目标很高，不幸地落榜了。但你要知道，你选择了一条更困难的路，你比别人更**勇敢**；你为之付出了足够的时间精力，你比别人更**努力**。所以，你比他们更**优秀**。更优秀的人反而没书读？如果可以从失败中吸取教训，纠正自己的不足，你迟早成功，比他们成功，无论是学历，还是未来的方方面面。我没有灌鸡汤。**人生由无数个选择构成，每个人都收敛于自己的数学期望（据大数定律）**。比如，你考名校的收益是100，录取的概率为80%；他考本校的收益是70，录取的概率为100%。继续保持你的**勇敢、努力与昂扬**，你最终的收益收敛于80，而他收敛于70（详见《新生：从伪教育到自我教育/下篇：自我教育/数学/贝叶斯一统成败》和《考研：有手就行》/下篇：考研杂谈/概率论）。怕就怕未被录取让你否认了**勇敢**这一优秀品质，进而否定自己比他们更**优秀**的事实，最终通过自暴自弃让原本不实的结论成真。这不是很可悲吗？
 
 ## 0x02 失败是成功之母
 
-很多人都忘记了这条朴素的道理。如果你比别人勇敢、努力、昂扬，但还是失败了。你至少要做一件事情：直面失败，对失败归因，纠正错误的认知。这么做才能发挥出失败的价值。以考研为例：
-+ 你是不是误判了自己的基础（裸考分数）？
-+ 对当前的你而言，你的目标（理想分数）是不是太高了？
-+ 你是不是高估了自己的学习能力（分数增长函数）？
-+ 你是不是高估了自己的执行力（在同一时间段内的有效学习时间）？
-+ 你是不是低估了自己的阻力（在同一时间段内的自由时间）？
+很多人忘记了这条朴素的道理。如果你比别人勇敢、努力、昂扬，但还是失败了。你至少需要做一件事情：直面失败，对失败归因，纠正不足。这样才可以发挥失败的价值。对于考研：
 
-如果考研失败了，你从这五个方面进行自我剖析，其思考的价值未必低于一张录取通知书。至少比心灰意冷和自暴自弃好得多，对吧？
+- 你是不是误判了自己的基础（裸考分数）？
+- 对当前的你而言，你的目标（理想分数）是不是太高了？
+- 你是不是高估了自己的学习能力（分数增长函数）？
+- 你是不是高估了自己的执行力（在同一时间段内的有效学习时间）？
+- 你是不是低估了自己的阻力（在同一时间段内的自由时间）？
 
-## 0x03 成功：re-definition
+如果考研失败，从上述五个方面进行自我剖析，其思考的价值未必低于一纸录取通知书，至少比心灰意冷和自暴自弃好得多。
 
-+ 传统的考研成功：上岸。
-+ 我认为的考研成功（广义）：“选择考研的人生”比“不选择考研的人生”更美好。
-+ 我认为的考研成功（狭义）：被录取、选到理想的导师、硕士生涯与自己憧憬的生活大致相同。
+## 0x03 成功：re-define
 
-想必大家都听说过一句话：硕士期间的最开心的时刻莫过于“收到录取通知书”和“拿到学位证”。我个人认为，硕士生涯最大的收获是学位证，意味着研究生那两三年过得非常失败。我衡量自己生活质量的标准是：一年前的自己傻不傻？越傻越好，越傻意味着自己进步越大。不要中二地以为自己已经看破一切，傲慢是最大的无知。
-+ 你导师有什么值得你学习的地方？
-+ 如何与渣导斗智斗勇？
-+ 如何与同门相处？
-+ 硕士期间的见闻、体验教会了你什么？
-+ 你是否更加“见自己、见天地、见众生”？
+- **传统的考研成功**：上岸。
+- **我认为的考研成功（广义）**：“选择考研的人生”比“不选择考研的人生”更美好。
+- **我认为的考研成功（狭义）**：被录取、选到理想的导师、硕士生涯与自己憧憬的生活大致相同。
 
-## 0x04 被录取者的共同点
+想必大家听说过一句话：硕士期间最开心的时刻莫过于“收到录取通知书”和“拿到学位证”。我个人认为，“硕士生涯最大的收获是学位证”意味着研究生阶段非常失败。
 
-当然，所有考研的人都有过一个共同的想法：导师、读研体验什么的我现在不想管，考上再说！那我告诉你，所有上岸的人有且仅有一个共同点：裸考分数 + f(t) ≥ 录取分数。其中，f(x)代表分数增长函数，t代表有效学习时间。
+- 导师有什么值得学习的地方？
+- 如何与渣导斗智斗勇？
+- 如何与同门相处？
+- 硕士期间的见闻、体验教会了你什么？
+- 你是否更加“见天地、见众生、见自己”？
 
-### 1. 裸考分数：待补充
-### 2. 分数增长函数：待补充
-### 3. 有效学习时间：待补充
-### 4. 录取分数：待补充
+其实，过程一直比结果更重要。只是越南的教育体系，让做题人以为“一考定终身”。从未有过自己的目标，那么结果亦无法带来他人心中、眼中、口中的最终结果。我常常以“华东某校CS的硕士学位证屁用没有”的逻辑强调某些更加重要的东西，因为从本质上看，**成败一词只有个人拥有定义权（价值角度）**。若以是非对错而论（真理角度），多数人对于成败的定义，即世俗的评价体系，是否值得警惕呢？因为**求仁得仁始终是少数人的特权**。
