02-18：写完了“下篇：考研杂谈/2. 目标”。

--- a/1. 初试方法论/0. 序：我的考研之路.md
+++ b/1. 初试方法论/0. 序：我的考研之路.md
@@ -28,7 +28,7 @@
 > 
 > 那人回到家，在无花果树后面的喷泉底下挖出了宝藏。
 
-这个小故事完美地划清了附册与传统考研经验贴的界限。在“明所以”之前，你只需要知道：在大二落幕之后，我选择了放弃保研资格，打算备考华中科技大学电气工程即可。
+这个小故事完美地划清了附册与传统考研经验帖的界限。在“明所以”之前，你只需要知道：在大二落幕之后，我选择了放弃保研资格，打算备考华中科技大学电气工程即可。
 
 ---
 
@@ -38,9 +38,9 @@
 
 命运确实如此巧合。第一，我根本不相信那些吹爆“宇宙机”的菜狗；第二，曾博那时候已经属于天天暴论的状态，所以我只是随手一搜（他的公众号）。但是，看到了那篇短短的旧文又如何？早期，我只是以一种调笑兼玩梗的心态看待曾博，毕竟他在知乎完全是一副魔怔人的样子，但另一方面，我很好奇：像他这种顶级做题家，为什么不把发暴论的时间用来割韭菜？比如开一些他所嘲讽的知乎live。而且，他初期的文章足以证明他的水平远高于开live的知乎大V。或者说，他初期的文章几乎证明了他是知乎的双商天花板之一。这一前一后的对比使我对他所发的严肃内容抱有极大的信任（因为无功利性和高水准的理性）。要知道，在考研界，无功利性和高水准的理性几乎是无法共存的。
 
-所谓无功利性，也可以叫做利益无关性，或者为爱发电。根据“吃相”，考研经验贴的作者分为三类：我是淋过雨的过来人，希望给大家无私地分享一些考研经验或心得；我是知识付费型老师，向你提供物有所值的服务；我是割韭菜型老师，为了挣尽可能多的钱。第三种作者最多，甚至爱惜羽毛的第二种作者为了与第三种作者竞争，不得不学习他们的营销技巧和肮脏手段。
+所谓无功利性，也可以叫做利益无关性，或者为爱发电。根据“吃相”，考研经验帖的作者分为三类：我是淋过雨的过来人，希望给大家无私地分享一些考研经验或心得；我是知识付费型老师，向你提供物有所值的服务；我是割韭菜型老师，为了挣尽可能多的钱。第三种作者最多，甚至爱惜羽毛的第二种作者为了与第三种作者竞争，不得不学习他们的营销技巧和肮脏手段。
 
-考研硬实力的高水准理性分为：错题本，考不上或者撞了狗屎运；做题人，以较为普通的学习模式考上了或者倒了八辈子血霉失手了；做题家，不可能考不上；考研教学水平的高水准理性分为：不懂考生，教不了别人；只懂与自己相似的考生，经验贴适用于情况相近的人；懂所有考生，可以对症下药地辅导所有人。
+考研硬实力的高水准理性分为：错题本，考不上或者撞了狗屎运；做题人，以较为普通的学习模式考上了或者倒了八辈子血霉失手了；做题家，不可能考不上；考研教学水平的高水准理性分为：不懂考生，教不了别人；只懂与自己相似的考生，经验帖适用于情况相近的人；懂所有考生，可以对症下药地辅导所有人。
 
 那篇利益无关且高水准的短文，把我劝进了CS，而且之后我也不会被任何劝进文或者劝退文改变。至于行情一年一变或者跨考CS的意义是否仅限于此，不在本文的讨论范围之内，按下不表。
 
@@ -63,7 +63,7 @@
 有了前面的铺垫，后两节关于“有手就行”的内容反而简单明了。我在考研报名前夕临时决定“两年之内，考入上海交通大学计算机系”的原因主要包括：
 
 - **慕强的价值观**：说实话，考中流985，我真的不甘心。难道我这辈子注定以二线中产为目标，作为下一代的养料而存在吗？人生需要一两次奋不顾身的尝试。如果清华的面试占比不高，我肯定考清华；如果北大考408，我肯定考北大；如果浙大不是性价比最低的那所名校，我也可能考浙大。反正无论如何，上交计算机系的平台已经足够用以触碰人生的上限了。
-- **王道的导学课**：大概买了一个34所自命题院校泛计算机专业（包括软工、网安和AI）的合集，清北和华五基本听完了。这个课程和一些知乎live以及经验贴给了我极大的自信：这些菜狗可以考上，那我考上（清北华五）的概率也很高啊！与此同时，我大概了解了几所顶尖院校的分数占比与录取难度。上交确实是近乎完美的选择。二战的时候，我对北大信科有些心动（北大信科改考408了）。但因为上交500 + 100 + 20 + 20 = 640 : 60（前面是考生所决定的初试、机试、听力和口语；面试只占60分），我依旧选择了考上交（也有机试的一点点基础）。
+- **王道的导学课**：大概买了一个34所自命题院校泛计算机专业（包括软工、网安和AI）的合集，清北和华五基本听完了。这个课程和一些知乎live以及经验帖给了我极大的自信：这些菜狗可以考上，那我考上（清北华五）的概率也很高啊！与此同时，我大概了解了几所顶尖院校的分数占比与录取难度。上交确实是近乎完美的选择。二战的时候，我对北大信科有些心动（北大信科改考408了）。但因为上交500 + 100 + 20 + 20 = 640 : 60（前面是考生所决定的初试、机试、听力和口语；面试只占60分），我依旧选择了考上交（也有机试的一点点基础）。
 - **龙场悟道**：从那时候起，我便注定拥有批判性思维、绝对的自信、顶级的认知、与同侪截然不同的人生。既然“两年之内，考入上海交通大学计算机系”便是一条与众不同的路，何不走走看呢？
 
 在考研报名结束之后，我高效地学了两个月。虽然于事无补，但也算让一战善始善终了。值得一提的是，在放弃保研资格的时候，我的一个高中同学说“能保研，何必放弃呢”；在决定二战上交CS的时候，我的另一个高中同学说“一战能考上，何必二战呢”。在写知乎的早期，我写过一些关于考研的内容，有人很好奇：学长，你二战的心态那么好嘛？其实原因也很简单：我奔着二战报的名，所以我早就接受了这个结局；报名之前，我事先知会了我爸妈“我大概率需要考两次”，所以家庭在二战期间没有对我施压。既然家人都理解、支持，而且二战的进程尽在掌握，我确实没有心态不好的理由。
