--- a/1. 初试方法论/1. 考研政治.md
+++ b/1. 初试方法论/1. 考研政治.md
@@ -5,7 +5,7 @@
 - 2020考研：目标70+；估分77 = 44 + 33；成绩79 = 44 + 35。
 - 2021考研：目标75+；估分80 = 43 + 8 + 7 + 7.5 + 7.5 + 7；成绩80 = 43 + 37。
 
-论裸考的知识储备，我是在所有考生中最差的人之一。因为我只考过开卷的思修，在大一下转入理科试验班之后，我不需要学马原、毛概、史纲，更别提闭卷考试了。我说我负基础并不为过。但是，我并不打算鼓吹自己的起点多低，靠着临时抱佛脚得到了上海地区让人眼红的考研政治分数。我的扯皮能力非常强。哪怕不背肖4，我综合题也可以30+。此外，我的学习能力很强。这篇经验贴旨在提供我所推荐的考研政治备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略的学习任务。
+论裸考的知识储备，我是在所有考生中最差的人之一。因为我只考过开卷的思修，在大一下转入理科试验班之后，我不需要学马原、毛概、史纲，更别提闭卷考试了。我说我负基础并不为过。但是，我并不打算鼓吹自己的起点多低，靠着临时抱佛脚得到了上海地区让人眼红的考研政治分数。我的扯皮能力非常强。哪怕不背肖4，我综合题也可以30+。此外，我的学习能力很强。这篇经验帖旨在提供我所推荐的考研政治备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略的学习任务。
 
 ## 0x02 方法论
 
