--- a/1. 初试方法论/2. 考研英语.md
+++ b/1. 初试方法论/2. 考研英语.md
@@ -5,7 +5,7 @@
 - 2020考研：目标70+；估分78；成绩72。
 - 2021考研：目标75+；估分72 = 9 + 34 + 8 + 5 + 6 + 10；成绩75。
 
-四级487分；六级481分。这英语基础不算好，但也不算特别差。2021年的英语一很难，75分还行。在任何院校的任何专业中，上海地区英语一75分的实力可以做到不拖初试的后腿（比上不足，比下有余）。如果英语一考75分左右就心满意足了，请继续往下看。如果托福100+，或者目标80+，这篇文章对你可能没什么帮助。这篇经验贴旨在提供我所推荐的考研英语一备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略的学习任务。
+四级487分；六级481分。这英语基础不算好，但也不算特别差。2021年的英语一很难，75分还行。在任何院校的任何专业中，上海地区英语一75分的实力可以做到不拖初试的后腿（比上不足，比下有余）。如果英语一考75分左右就心满意足了，请继续往下看。如果托福100+，或者目标80+，这篇文章对你可能没什么帮助。这篇经验帖旨在提供我所推荐的考研英语一备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略的学习任务。
 
 ## 0x02 方法论
 
