--- a/src/1-初试方法论/2-考研英语.md
+++ b/src/1-初试方法论/2-考研英语.md
@@ -107,15 +107,15 @@
 
 > 词典见[Issues #4](https://github.com/Anticorianderist/kaoyan/issues/4)。
 
-![eudb_cn](https://github.com/Anticorianderist/kaoyan/blob/main/0.%20Supportive%20Directory/%E8%80%83%E7%A0%94%E8%8B%B1%E8%AF%AD%E6%89%80%E4%BD%BF%E7%94%A8%E7%9A%84%E5%9B%BE%E7%89%87/eudb_en.jpeg)
+![eudb_cn](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/eudb_en.jpeg)
 
-![abandon](https://github.com/Anticorianderist/kaoyan/blob/main/0.%20Supportive%20Directory/%E8%80%83%E7%A0%94%E8%8B%B1%E8%AF%AD%E6%89%80%E4%BD%BF%E7%94%A8%E7%9A%84%E5%9B%BE%E7%89%87/abandon.jpeg)
+![abandon](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/abandon.jpeg)
 
 **第3步**：创建默认生词本——考研生词本。
 
 #### B. 笔译
 
-![2021年考研英语一の第1篇阅读理解（节选）](https://github.com/Anticorianderist/kaoyan/blob/main/0.%20Supportive%20Directory/%E8%80%83%E7%A0%94%E8%8B%B1%E8%AF%AD%E6%89%80%E4%BD%BF%E7%94%A8%E7%9A%84%E5%9B%BE%E7%89%87/2021%E5%B9%B4%E8%80%83%E7%A0%94%E8%8B%B1%E8%AF%AD%E4%B8%80%E3%81%AE%E7%AC%AC1%E7%AF%87%E9%98%85%E8%AF%BB%E7%90%86%E8%A7%A3%EF%BC%88%E8%8A%82%E9%80%89%EF%BC%89.jpeg)
+![2021年考研英语一の第1篇阅读理解（节选）](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/2021%E5%B9%B4%E8%80%83%E7%A0%94%E8%8B%B1%E8%AF%AD%E4%B8%80%E3%81%AE%E7%AC%AC1%E7%AF%87%E9%98%85%E8%AF%BB%E7%90%86%E8%A7%A3%EF%BC%88%E8%8A%82%E9%80%89%EF%BC%89.jpeg)
 
 以2021考研英语一为例，考虑到大家英语基础各不相同，我装作不认识某些单词，便于演示后续过程。
 
@@ -146,7 +146,7 @@
 4. rank 6001-8000为2星
 5. rank ＞8000为1星
 
-![sound](https://github.com/Anticorianderist/kaoyan/blob/main/0.%20Supportive%20Directory/%E8%80%83%E7%A0%94%E8%8B%B1%E8%AF%AD%E6%89%80%E4%BD%BF%E7%94%A8%E7%9A%84%E5%9B%BE%E7%89%87/sound.jpeg)
+![sound](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/sound.jpeg)
 
 #### D. 背诵
 
@@ -154,7 +154,7 @@
 
 **将学习计划设置为一个无法完成的目标**，比如500个，每天背诵考研生词本0.5h（具体的背诵时长根据英语基础和目标自行调整）。
 
-![设置学习计划](https://github.com/Anticorianderist/kaoyan/blob/main/0.%20Supportive%20Directory/%E8%80%83%E7%A0%94%E8%8B%B1%E8%AF%AD%E6%89%80%E4%BD%BF%E7%94%A8%E7%9A%84%E5%9B%BE%E7%89%87/%E8%AE%BE%E7%BD%AE%E5%AD%A6%E4%B9%A0%E8%AE%A1%E5%88%92.jpeg)
+![设置学习计划](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/%E8%AE%BE%E7%BD%AE%E5%AD%A6%E4%B9%A0%E8%AE%A1%E5%88%92.jpeg)
 
 #### E. 循环
 
