--- a/1-src/1-methodologies/1-101.md
+++ b/1-src/1-methodologies/1-101.md
@@ -37,17 +37,17 @@
 
 本阶段结束后的目标是70+分。
 
-**具体的学习方法**
+**具体的学习方法**：
 
 - 选择题：跟着陆寓丰做配套讲义的练习题即可。
 - 综合题：听陆寓丰的讲解，形成组织综合题答案的模式。如果无从下手，你就学习陆寓丰的套路。
 
-**理想的学习效果**
+**理想的学习效果**：
 
 - 选择题：单选题不必多说，全靠第4阶段的背诵；关键是形成做多选题的感觉。比如，双选三选四选的分布（马哲几乎必有双选，三选最多，大部分的四选在毛中特和形策中）、模棱两可的选项选还是不选。
 - 综合题：每个科目的答题模板（分点、原理 + 结合材料；总结句）；怎么从材料中提炼踩分点？
 
-**注意事项**
+**注意事项**：
 
 - 别光听，动手做选择题；动手写分析题，不用完完整整地写，可以写几个关键词代表踩分点。
 - 不需要背诵！不需要背诵！不需要背诵！陆寓丰的技巧课搭的是**应试**的框架。
