--- a/1-src/1-methodologies/2-201.md
+++ b/1-src/1-methodologies/2-201.md
@@ -83,19 +83,19 @@
 
 考研词汇量是考研英语的核心基础之一，其重要程度毋庸置疑。对于考研词汇，**我用过恋练有词、扇贝单词、墨墨背单词、欧路词典和红宝书精缩版。这些方法可行，只要努力，背三五遍，英语一考70分非常实际**。但是，如果存在一种更加高效的方法，何乐不为呢？
 
-#### A. 单词的出现频率不同决定了单词存在高低贵贱之分。
+**单词的出现频率不同决定了单词存在高低贵贱之分。**
 
 正常考生知道考研英语大纲词汇（5500词）；扇贝单词APP也有相应的单词书。大家可能知道考研英语核心词汇，数量在两千到三千不等。第一次考研，我前期使用扇贝单词背大纲词汇，后期使用扇贝单词背核心词汇。就个人的感受而言，**背三遍大纲词汇不如背五遍核心词汇，因为前者的性价比很低。在大纲词汇中、不在核心词汇中的单词，极大的概率不在考场上，即使不小心遇到了，对分数的影响低到足以忽略不计。此外，你背过也不一定记得**。所以，**无需担心不认识考研英语的“零频词”和“无用词”**。怎么判断是否零频、是否无用呢？后续步骤将顺便解决此问题。
 
-#### B. 考研英语一喜欢考熟词僻义。
+**考研英语一喜欢考熟词僻义。**
 
 在背单词的时候，存在以下常见问题：**一个单词那么多种意思，需要全背吗？记不住怎么办？如果不全背，背哪些或者哪个？在考场上，认识那个单词，但是只背了与语境不匹配的意思怎么办？**这正是背单词软件的缺陷，但欧路词典可以完美地解决上述弊病。
 
-#### C. 近三年真题的单词重复率超过百分之八十五。
+**近三年真题的单词重复率超过百分之八十五。**
 
 **此说法出自唐迟**。当然，三和八十五都是概数，把三改成五，八十五改成八十也无妨。大家懂意思就行。因为唐迟的阅读风评不错，所以我听了他的几节课。课程质量我不作评论，但**在是否留真题作模考之用这个问题上，我的看法和他高度一致：不需要**。我认为，**真题是用来研究的，年份越近的真题越重要**。有些小伙伴也许担心：大家都说模拟卷质量很差，影响题感，但如果不考前模拟，把握不好考试节奏怎么办？我的考试经历：第一次，翻译没做完，写了两道半；第二次，阅读理解做了两遍，改对了三个（也属于不正常的考试节奏）。考前模拟甚至考场的考试节奏没有那么重要，尤其在摸透了考研英语的套路之后。吃透了真题最直接的标准：**在考场上的那张试卷和近几年的真题非常像，出题风格很像，干扰项和正确选项也很像**。基于此，我建议时间较为紧迫的同学笔译近三年阅读，在笔译的过程中生成欧路词典的生词本，也就是上文的考研生词本。如果备考时间充足，笔译近五年阅读；如果还是不放心，稳中求稳，笔译近十年阅读。没有考四六级的小伙伴也可以这样操作，既可以拿四六级检验这个方法的效果，也可以拉长战线，大一大二学完考研英语（权当学习英语）。不用担心这个方法耗时，起初一篇可能需要一两个小时，但肯定是值得的，慢慢地就快了。我在笔译了几年真题之后，不写译文，只看看哪些单词需要加入考研生词本，搞定一篇阅读顶多十几分钟。
 
-#### D. 应试最高效的方法莫过于，找到失分点，解决它。
+**应试最高效的方法莫过于，找到失分点，解决它。**
 
 我二战有一个体会：**阅读，温故而知新。知新不是新的领悟，而是新的知识**。原来这句话这个意思！我第一次考研居然草率地把它忽略了？这个体会在笔译前十篇阅读时尤为深切。这个方法和传统背单词方法的核心区别在于：**你既在背单词，又在学阅读。背单词和研究真题构成一种相互促进的关系**。如果好好在阅读中背单词，**阅读理解至多错两道是非常合理的目标**。
 
@@ -109,28 +109,28 @@
 
 > 词典见[Issues #4](https://github.com/Anticorianderist/kaoyan/issues/4)。
 
-![eudb-cn](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/eudb-en.jpeg)
+![eudb-cn.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/eudb-en.jpeg)
 
-![abandon](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/abandon.jpeg)
+![abandon.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/abandon.jpeg)
 
 **第3步**：创建默认生词本——考研生词本。
 
 #### B. 笔译
 
-![2021-201-excerpt](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/2021-201-excerpt.jpeg)
+![2021-201-excerpt.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/2021-201-excerpt.jpeg)
 
 以2021考研英语一为例，考虑到大家英语基础各不相同，我装作不认识某些单词，便于演示后续过程。
 
-> 但是，在过去的12个月里，这些commuter已经经历了这些年最糟糕的rail strike。最近一波strike的责任rest on工会。但是，这是一个strong的例子。那些最受industrial action不良影响的人，应该收到他们所经历的disruption的compensation。 
-> 
-> …… 
-> 
-> 作者hold，这一年rail passenger费用的增加____。 
-> 
-> A. 减轻列车operator的负担 
-> 
-> B. keep pace with inflation 
-> 
+> 但是，在过去的12个月里，这些commuter已经经历了这些年最糟糕的rail strike。最近一波strike的责任rest on工会。但是，这是一个strong的例子。那些最受industrial action不良影响的人，应该收到他们所经历的disruption的compensation。
+>
+> ……
+>
+> 作者hold，这一年rail passenger费用的增加____。
+>
+> A. 减轻列车operator的负担
+>
+> B. keep pace with inflation
+>
 > C. 对commuter来说，是一个大惊喜
 
 #### C. 考研生词本
@@ -148,7 +148,7 @@
 4. rank 6001-8000为2星
 5. rank ＞8000为1星
 
-![sound](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/sound.jpeg)
+![sound.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/sound.jpeg)
 
 #### D. 背诵
 
@@ -156,7 +156,7 @@
 
 **将学习计划设置为一个无法完成的目标**，比如500个，每天背诵考研生词本0.5h（具体的背诵时长根据英语基础和目标自行调整）。
 
-![plan](https://github.com/Anticorianderist/kaoyan/blob/main/support/figures/plan.jpeg)
+![plan.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/plan.jpeg)
 
 #### E. 循环
 
