--- a/1-src/1-methodologies/3-301.md
+++ b/1-src/1-methodologies/3-301.md
@@ -89,7 +89,7 @@
 
 ## 附录：应试的两个误区
 
-### 1. 学习模式有问题：刷题太多，总结太少。
+### 1. 学习模式有问题：刷题太多，总结太少
 
 应试的本质是**刻意练习**，但多数人仅仅**重复地犯错**。
 
@@ -97,7 +97,7 @@
 
 无论高考也好，考研也罢，错题本做了海量的题，但每道题都做得**浅**。如果以上述规格对待每道题，刷题量不一定非常大，但分数确实可以质变。
 
-### 2. 对题目的区分度太差。
+### 2. 对题目的区分度太差
 
 以数学为例，错题分为（或者一道题涵盖多种错误）：
 
@@ -114,15 +114,15 @@
 更优秀的应对策略：
 
 - ≈
-	- **统计所有“原本可以做对的题目”**：只要统计的题目足够多，就知道为什么总是“粗心”了。
-	- **交叉检验**：绝大部分数学题存在多种解法，即使没有也可以通过逆运算验算。一旦答案的双解法统一，这道题几乎不可能“粗心”。
-	- **允许失误**：做题的速度太慢或交叉检验的能力太差，而且不费脑子的数学题往往计算量比较大。所以，允许少量失误。某些题的答案看着非常诡异，错的可能性大；某些题的答案看着没什么问题，不检查。选择题：没有任何失误的理由，甚至应该看出干扰项对应的坑；填空题：分数贵，必须检查一遍；解答题：战略性放弃，因为即使答案是错的，也有步骤分。
+  - **统计所有“原本可以做对的题目”**：只要统计的题目足够多，就知道为什么总是“粗心”了。
+  - **交叉检验**：绝大部分数学题存在多种解法，即使没有也可以通过逆运算验算。一旦答案的双解法统一，这道题几乎不可能“粗心”。
+  - **允许失误**：做题的速度太慢或交叉检验的能力太差，而且不费脑子的数学题往往计算量比较大。所以，允许少量失误。某些题的答案看着非常诡异，错的可能性大；某些题的答案看着没什么问题，不检查。选择题：没有任何失误的理由，甚至应该看出干扰项对应的坑；填空题：分数贵，必须检查一遍；解答题：战略性放弃，因为即使答案是错的，也有步骤分。
 - ≠
-	- **听懂是完全不够的**：不像英语，如果对数学某个概念的理解有误，大概率对所有上下游概念的理解均有误。数学不存在多少所谓的“封闭集”，章与章之间也未必弱耦合。所以，在脑子里有一个知识框架，每个学科包括哪些章节、章节之间是如何过渡的。如果某道题错了，必须可以光速地定位该概念所属的章节与衍生概念（父概念与子概念以及相关的性质与定理）。
-	- **不知道自己不知道，显然是致命错误**。
+  - **听懂是完全不够的**：不像英语，如果对数学某个概念的理解有误，大概率对所有上下游概念的理解均有误。数学不存在多少所谓的“封闭集”，章与章之间也未必弱耦合。所以，在脑子里有一个知识框架，每个学科包括哪些章节、章节之间是如何过渡的。如果某道题错了，必须可以光速地定位该概念所属的章节与衍生概念（父概念与子概念以及相关的性质与定理）。
+  - **不知道自己不知道，显然是致命错误**。
 - ≡
-	- **面对难题，不应该摆烂**：一道数学题往往杂揉了四五个概念，经过若干步骤得到正确答案。既然如此，哪个（些）步骤想不到？解析一道题的能力，决定了做题能力。很多人早早地刷成了90-120分的水平（150分制），但无法突破。
-	- 即使战略性放弃，也要学习一遍答案的“概念”和“步骤”。只要刷题刷多了，就不难发现：**“不会”和“粗心”是一样的，只要见多了出题套路，没有不会的题，但摆烂的话，甚至不知道难题难在哪**。
+  - **面对难题，不应该摆烂**：一道数学题往往杂揉了四五个概念，经过若干步骤得到正确答案。既然如此，哪个（些）步骤想不到？解析一道题的能力，决定了做题能力。很多人早早地刷成了90-120分的水平（150分制），但无法突破。
+  - 即使战略性放弃，也要学习一遍答案的“概念”和“步骤”。只要刷题刷多了，就不难发现：**“不会”和“粗心”是一样的，只要见多了出题套路，没有不会的题，但摆烂的话，甚至不知道难题难在哪**。
 
 题目考察概念 + 步骤。出题人以概念与步骤的难度，区分广大考生。我们进一步将步骤分为思路和计算。也就是说：题目 = 概念 + 思路 + 计算。概念难，思路难，计算难，分别对应了三种错误：
 
