--- a/1-src/1-methodologies/1-101.md
+++ b/1-src/1-methodologies/1-101.md
@@ -2,40 +2,41 @@
 
 ## 0x01 阅读须知
 
-我参加了2020考研和2021考研，报考专业均为上海交通大学计算机系专硕（大数据方向）。
+我参加了2020考研和2021考研，报考专业均为上海交通大学计算机科学与工程系专硕（大数据方向）。
 
 - 2020考研：目标70+；估分77 = 44 + 33；成绩79 = 44 + 35。
 - 2021考研：目标75+；估分80 = 43 + 8 + 7 + 7.5 + 7.5 + 7；成绩80 = 43 + 37。
 
-论裸考的知识储备，我是在所有考生中最差的人之一。因为我只考过开卷的思修，在大一下转入理科试验班之后，我不需要学马原、毛概、史纲，更别提闭卷考试了。我说我负基础并不为过。但是，我并不打算鼓吹自己的起点多低，靠着临时抱佛脚得到了上海地区让人眼红的考研政治分数。我的扯皮能力非常强。哪怕不背肖4，我综合题也可以30+。此外，我的学习能力很强。这篇经验帖旨在提供我所推荐的考研政治备考攻略，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是：能够保质保量地完成备考攻略的学习任务。
+这篇文章旨在提供我所推荐的考研政治备考方案，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是“能够保质保量地完成备考方案的学习任务”。
 
 ## 0x02 方法论
 
-### 1. 约09-01 → 10-10：徐涛の强化班
+### 1. 约09-01 → 10-10：徐涛/强化班
 
-2021考研：徐涛的强化班总时长约60h，1.5倍速，40h听完。每天1h，共40天。
+2021考研：徐涛的强化班总时长约60h。1.5倍速，40h听完。每天1h，共40天。
 
-本阶段的目标是60+分。徐涛的核心考案即可，不需要肖秀荣的精讲精练。
+本阶段的目标是60+。
 
-**具体的学习方法**：跟着徐涛的课，在核心考案上圈圈划划（好像有三种颜色标记重点、难点、非重点）。我个人觉得，徐涛的强化课讲得无可挑剔。跟着他的节奏就行。
+**具体的学习方法**：跟着徐涛的课，在核心考案上划划圈圈。
 
 **理想的学习效果**：
 
 - 了解考研政治的大致框架：总共几科？分数占比如何？每科分为哪些部分（章节）？
-- 了解每个科目的重点：马原的三规律五范畴；毛中特的四个全面五位一体；思修法基的道德和法律；等等。
-- 了解每个学科的脉络：从马哲到马政经再到科社；习思想的四个全面和五位一体；史纲的时间线；等等。
+- 了解每个科目的重点：马原的三规律五范畴、毛中特的四个全面五位一体、思修法基的道德和法律等。
+- 了解每个学科的脉络：从马哲到马政经再到科社、习思想的四个全面和五位一体、史纲的时间线等。
 
 **注意事项**：
 
-- 别停下来做笔记，从头到尾放一遍，尽量认真听就行了，尤其是马哲。
-- 给每个考点做一下标记，主要是为了提高听课效率；后续复习也可以快速地过一下。
-- 不需要背诵！不需要背诵！不需要背诵！徐涛的强化课搭的是**知识**的框架。
+- 徐涛的核心考案即可，不需要肖秀荣的精讲精练。
+- 别停下来做笔记，从头到尾放一遍，尽量认真听就行了，尤其马哲。
+- 给每个考点做一下标记，主要为了提高听课效率；后续复习也可以快速地过一下。
+- 不需要背诵。徐涛的强化课搭的是知识点的框架。
 
-### 2. 约10-11 → 10-31：陆寓丰の技巧班
+### 2. 约10-11 → 10-31：陆寓丰/技巧班
 
-2021考研：陆寓丰的技巧班，总时长约40h，2倍速，20h听完。每天1h，共20天。
+2021考研：陆寓丰的技巧班总时长约40h。2倍速，20h听完。每天1h，共20天。
 
-本阶段结束后的目标是70+分。
+本阶段的目标是70+。
 
 **具体的学习方法**：
 
@@ -44,44 +45,53 @@
 
 **理想的学习效果**：
 
-- 选择题：单选题不必多说，全靠第4阶段的背诵；关键是形成做多选题的感觉。比如，双选三选四选的分布（马哲几乎必有双选，三选最多，大部分的四选在毛中特和形策中）、模棱两可的选项选还是不选。
-- 综合题：每个科目的答题模板（分点、原理 + 结合材料；总结句）；怎么从材料中提炼踩分点？
+- 选择题：单选题不必多说，全靠第4阶段的背诵；重点是“形成做多选题的感觉”。例如，双选三选四选的分布（马哲几乎必有双选，三选最多，大部分的四选在毛中特和形策中）、模棱两可的选项选不选的个人依据是什么。
+- 综合题：形成了每个科目的答题模板（分点，关键句 + 结合材料；总结句）；知道怎么从材料中提炼得分素材。
 
 **注意事项**：
 
-- 别光听，动手做选择题；动手写分析题，不用完完整整地写，可以写几个关键词代表踩分点。
-- 不需要背诵！不需要背诵！不需要背诵！陆寓丰的技巧课搭的是**应试**的框架。
+- 别光听，动手做选择题；动手写分析题，不用完完整整地写，可以写关键词代表踩分点。
+- 不需要背诵。陆寓丰的技巧课搭的是应试的框架。
 
-### 3. 约11-01 → 11-10：肖秀荣的1000题
+### 3. 约11-01 → 11-10：肖秀荣/1000题
 
 每天1h，刷10天。只刷选择题，能刷多少是多少。
 
-优先级：多选题 > 单选题。对于多选题，每个学科都刷一些；对于单选题，毛中特可刷可不刷。最重要的是马哲和毛中特的多选题，其次是史纲的多选题，再次是史纲的单选题，最后是其它。
+对于单选题，毛中特可刷可不刷；对于多选题，每个学科都刷一些。总的来说，最重要的是马哲和毛中特的多选题，其次是史纲的多选题，再次是史纲的单选题，最后是其它。
 
 **具体的学习方法**：刷题，对答案，知道哪里错了就行。
 
-**理想的学习效果**：形成并印证每个学科的题感，实际运用一下陆寓丰技巧课所讲的理论。
+**理想的学习效果**：形成每个学科的题感；实际运用一下陆寓丰技巧班所讲的应试技巧。
 
-**注意事项**：不需要背诵！不需要背诵！不需要背诵！做肖秀荣的1000题只是为了找**题感**。
+**注意事项**：不需要背诵。做肖秀荣的1000题只是为了找**题感**。
 
 ### 4. 约11-11 → 12-25：模拟卷
 
 每天2h，持续45天。重中之重在于**肖8肖4**。
 
-本阶段结束后的目标是75+分。
+本阶段的目标是75+。
 
-- **其它模拟卷**：只刷选择题，刷一遍就好。错了的单选可以稍微背一背，多选就算了。
-- **肖8**：只刷选择题，反复刷，刷到“**一分钟可以做完一套，而且满分**”为止。
-- **肖4**：选择题反复刷，刷到“一分钟可以做完一套，而且满分”为止；综合题按照陆寓丰技巧班的套路整理肖4，**背熟前2套，看熟后2套**。
+- 肖8：只刷选择题，反复刷，刷到“一分钟可以做完一套，而且满分”为止。
+- 肖4：选择题反复刷，刷到“一分钟可以做完一套，而且满分”为止；综合题按照陆寓丰技巧班的套路整理肖4，背熟前2套，看熟后2套。
+- 其它模拟卷：只刷选择题，一遍就好。错了的单选可以稍微背一背；多选就算了。
 
-**具体的学习方法**：刷题，对答案，既要知道对的选项为什么对，也要知道错的选项为什么错（肖8肖4）。
+**具体的学习方法**：
 
-**理想的学习效果**：一分钟可以做完一套肖8肖4，而且满分。
+- 选择题：刷题，对答案。对于肖8肖4，既要知道对的选项为什么对，也要知道错的选项为什么错。
+- 综合题：按照自己组织综合题答案的模式，改编肖4综合题的答案，只需要保留关键句和总结句；背熟前2套；看熟后2套。
 
-**注意事项**：狂背肖8肖4！狂背肖8肖4！狂背肖8肖4！
+**理想的学习效果**：
 
-## 0x03 建议
+- 选择题：一分钟可以做完一套肖8肖4的选择题，而且满分。
+- 综合题：全部押中的题，拿80%的分；部分押中的题，拿70%的分；没有押中的题，拿60%的分。
+
+**注意事项**：
+
+- 在改编答案的时候，只形成3个关键句和1个总结句。如果是XX精神这类四五个词语的答案，照搬。
+- 在考场上，答案的结构最好是“总分总”：改写题目；关键句 + 材料（分为3点或4点）；总结句。对于完全押中的题，可以直接默写3点；对于其它题，最好从你的“素材库”（所有的关键句和总结句）中凑出相关的4点。
+
+## 0x03 补充
 
 - 学习能力和执行能力因人而异，请根据自身情况稍作调整。
-- 盗版课程和书籍的电子扫描版满天飞，大家可以先找盗版课程听一听、盗版书籍看一看，别花冤枉钱。如果认为物有所值且经济实力允许，请支持正版。
-  
+- 盗版课程和书籍满天飞。大家可以先找盗版课程听一听、盗版书籍看一看，别花冤枉钱。如果认为物有所值且经济实力允许，请支持正版。
+- 关于本文的时效性：方法论过时得很快，因为考纲变，课程也变。我个人建议你结合“下篇：考研杂谈”DIY自己的备考方案。在理解了下篇之后，你可以基于上篇的模板，修改其中的细节。
