--- a/1-src/1-methodologies/4-408.md
+++ b/1-src/1-methodologies/4-408.md
@@ -2,17 +2,19 @@
 
 ## 0x01 阅读须知
 
-我参加了2020考研和2021考研，报考专业均为上海交通大学计算机系专硕（大数据方向）。
+我参加了2020考研和2021考研，报考专业均为上海交通大学计算机科学与工程系专硕（大数据方向）。
 
 - 2020考研：估分91；成绩86。
 - 2021考研：目标125+；估分125 = 70 + 14 + 21 + 13 + 7；成绩122。
 
-我的408一般，和考研英语的层次差不多。在任何院校的任何专业中，上海地区408 122分的实力可以做到不拖初试的后腿（比上不足，比下有余）。作为一名跨考生，我认为下述简单且粗暴的方法论几乎是最高效的备考攻略之一。但是，清北华五、好好学习、没有保研资格的科班生也许可以在更少的轮次下得到更高的分数。此外，还有一些跨考大佬（顶配学习力）可能以下述攻略的改良版获得更高的效率。因此，我的建议是，如果你认为你的学习力在我之下，抄作业；否则，参考后续文章（比如主要矛盾、学习曲线）关于408的分析即可。值得提醒的是，与大部分专业课不同，408是杂揉了四门专业课，知识点又多又杂又细又碎的巨无霸学科。如果你是跨考生，而且目标是清北华五的纯计算机系，务必将408作为考研初试的主要矛盾（对，它比数学更重要）。
+这篇文章旨在提供我所推荐的计算机学科专业基础综合（408）备考方案，希望可以让大家在应试上少浪费一点时间、精力和金钱。它对你的要求是“能够保质保量地完成备考方案的学习任务”。
+
+值得一提的是，这篇文章面向跨考生。科班生仅供参考。
 
 ## 0x02 方法论
 
 - **核心原则**：王道单科书 + 真题，2遍120、3遍130。
-- **备考过程**：以【DS → 计组 → OS → 计网】的顺序，刷完王道单科书；以年份递增的顺序，刷完真题。反复执行以上过程。
+- **备考过程**：以“DS → 计组 → OS → 计网”的顺序，刷完王道单科书；以年份递增的顺序，刷完真题。反复执行以上过程。
 
 ### 1. 王道单科书
 
@@ -21,7 +23,7 @@
 **注意事项**：
 
 - 一般来说，选择题的正确率不低于75%，学习状态正常。若低于75%，有必要反省一下自己是不是没有认真地看书。
-- 第1遍：可以跳过综合题；第2+遍（多多益善）：刷综合题，但只需要刷综合题的真题。
+- 第1遍：可以跳过综合题；第2+遍：刷综合题，但只需要刷综合题的真题。
 
 ### 2. 真题
 
@@ -29,16 +31,21 @@
 
 **注意事项**：
 
-- 第1遍：做不动综合题正常，不需要在意分数。在订正的时候，将每道综合题当作例题，认认真真地学一遍。
-- 第2遍：在第1遍真题和第2遍王道单科书的洗礼下，总分应该不低于120分。若低于120分，有必要反省一下自己的学习效果。
+- 第1遍：做不动综合题很正常，不需要在意分数。在订正的时候，将每道综合题当作例题，认认真真地学一遍。
+- 第2遍：在第1遍真题和第2遍王道单科书的洗礼下，总分应该不低于120分。若低于120分，有必要反省一下自己的学习状态。
 - 第3遍：总分应该不低于140分。若低于140分，有必要反省一下自己的学习效果。
-- 近五年真题：12月，5场模考，总分应该不低于135分（学了2遍）或145分（学了3遍）。
+- 近五年真题：12月进行5场模考，总分应该不低于135分（学了2遍）或145分（学了3+遍）。
 
-## 0x03 补充说明
+### 3. 其它
 
-- 王道单科书相配套的学习模式是错题本；真题相配套的学习模式是总结。一些通用的学习模式和学习理念，我将在考研杂谈篇中详述。
-- **综合题/学习方法**：除了上述学习任务，还有必要“系统地”总结408的大题。比如，某个周末总结一下历年DS的算法题（其它大题亦同）。408大题的特色是“恶心”，尤其计组。但是，只要反反复复地做3遍以上，套路还是非常明显的。
-- **所谓的“指定教材”**：如果尚在大一大二，我建议好好地学一遍四大基础课（参考[CS DIY](https://csdiy.wiki/)），否则，考研期间不需要对着“指定教材”学一遍。关于“指定教材”和“黑皮书系列”，我将在“考研杂谈：学习曲线”中详述。甩一个简单粗暴的结论，看到别人使用严蔚敏、唐朔飞等人的所谓“指定教材”备考，你就偷着乐吧。
+- **综合题**：除了上述学习任务，还有必要系统地总结408的大题。例如，某个周末总结一下历年DS的算法题（其它大题亦同）。408大题的特色是恶心，尤其计组。但是，只要认真地做3遍以上，解题思路还是非常固定的。
+- **参考教材**：如果尚在大一大二，我建议你好好地学一遍四大基础课（参考[CS DIY](https://csdiy.wiki/)）。但是，即使你零基础，考研期间不需要对着“指定教材”学一遍。关于“指定教材”和“黑皮书系列”，我将在“考研杂谈：学习曲线”中详述。甩一个简单粗暴的结论，看到别人使用严蔚敏、唐朔飞等人的所谓“指定教材”备考，你就偷着乐吧。
 - **王道/8套模拟卷**：如果你的执行力不错，完成3遍“王道单科书 + 真题”（第1轮不超过三个月；第2+轮不超过两个月），不说绰绰有余，学有余力应该不成问题。所谓学有余力，等于可以腾出时间精力折腾其它学习材料。对于王道的8套模拟卷，你可以模考8次，但12月必须通过近五年真题的5场模考重拾题感。说实话，王道模拟卷的质量很差（因为不可能存在哪个辅导机构拥有考研命题组级别的阵容），和王道单科书的综合题一样，既不像真题，也押不中考点。王道模拟卷最大的优点是简单，动辄135+甚至140+，可以让你信心倍增。
 - **王道/考点分析（王道的真题解析/附赠）**：反复地看，把它当成是一份完美的真题笔记。你甚至可以不断地完善它。比如，在旁边的空白处写上每个考点对应的题号和总分值（考频）、缺漏的知识点。
 - **王道/思维导图**：比较鸡肋，12月可以从王道单科书转向思维导图，查缺补漏。对知识点的脑补能力越强，学习效果越好，否则即为缺漏。
+
+## 0x03 补充
+
+- 学习能力和执行能力因人而异，请根据自身情况稍作调整。
+- 盗版课程和书籍满天飞。大家可以先找盗版课程听一听、盗版书籍看一看，别花冤枉钱。如果认为物有所值且经济实力允许，请支持正版。
+- 关于本文的时效性：方法论过时得很快，因为考纲变，书目变，课程也变。我个人建议你结合“下篇：考研杂谈”DIY自己的备考方案。在理解了下篇之后，你可以基于上篇的模板，修改其中的细节。
