--- a/1-src/1-methodologies/1-101.md
+++ b/1-src/1-methodologies/1-101.md
@@ -45,7 +45,7 @@
 
 **理想的学习效果**：
 
-- 选择题：单选题不必多说，全靠第4阶段的背诵；重点是“形成做多选题的感觉”。例如，双选三选四选的分布（马哲几乎必有双选，三选最多，大部分的四选在毛中特和形策中）、模棱两可的选项选不选的个人依据是什么。
+- 选择题：单选题不必多说，全靠第4阶段的背诵；重点是“形成做多选题的感觉”。例如，双选三选四选的分布（马哲几乎必有双选，17个多选题三选最多，大部分的四选在毛中特和形策中）、模棱两可的选项选不选的个人依据是什么。
 - 综合题：形成了每个科目的答题模板（分点，关键句 + 结合材料；总结句）；知道怎么从材料中提炼得分素材。
 
 **注意事项**：
@@ -63,11 +63,11 @@
 
 **理想的学习效果**：形成每个学科的题感；实际运用一下陆寓丰技巧班所讲的应试技巧。
 
-**注意事项**：不需要背诵。做肖秀荣的1000题只是为了找**题感**。
+**注意事项**：不需要背诵。做肖秀荣的1000题只是为了找题感。
 
 ### 4. 约11-11 → 12-25：模拟卷
 
-每天2h，持续45天。重中之重在于**肖8肖4**。
+每天2h，持续45天。重中之重在于肖8肖4。
 
 本阶段的目标是75+。
 
@@ -87,11 +87,11 @@
 
 **注意事项**：
 
-- 在改编答案的时候，只形成3个关键句和1个总结句。如果是XX精神这类四五个词语的答案，照搬。
+- 在改编答案的时候，只形成3个关键句和1个总结句。如果是抗美援朝精神这类四五个词语的答案，照搬。
 - 在考场上，答案的结构最好是“总分总”：改写题目；关键句 + 材料（分为3点或4点）；总结句。对于完全押中的题，可以直接默写3点；对于其它题，最好从你的“素材库”（所有的关键句和总结句）中凑出相关的4点。
 
 ## 0x03 补充
 
 - 学习能力和执行能力因人而异，请根据自身情况稍作调整。
 - 盗版课程和书籍满天飞。大家可以先找盗版课程听一听、盗版书籍看一看，别花冤枉钱。如果认为物有所值且经济实力允许，请支持正版。
-- 关于本文的时效性：方法论过时得很快，因为考纲变，课程也变。我个人建议你结合“下篇：考研杂谈”DIY自己的备考方案。在理解了下篇之后，你可以基于上篇的模板，修改其中的细节。
+- 关于本文的时效性：方法论过时得很快，因为考纲变，书目变，课程也变。我个人建议你结合“下篇：考研杂谈”DIY自己的备考方案。在理解了下篇之后，你可以基于上篇的模板，修改其中的细节。
