--- a/1-src/1-methodologies/2-201.md
+++ b/1-src/1-methodologies/2-201.md
@@ -31,7 +31,7 @@
 隔天2.5h。其中，模考2h，失分报告0.5h。
 
 - **模考**：阅读理解 → 新题型 → 完形填空。掐表做题，没做完就没做完。
-- **失分报告**：针对丢的分，写错因和纠错笔记。在0.5h内总结，没写完就没写完。如果此前的任务（包括背单词）好好执行，8月的失分报告和7月的失分报告有所不同。在下次模考之前，看一下上次模考所对应的两份失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
+- **失分报告**：针对丢的分，写错因和纠错笔记。在0.5h内总结，没写完就没写完。如果此前的学习任务（包括背单词）好好执行，8月的失分报告和7月的失分报告有所不同。在下次模考之前，看一下上次模考所对应的两份失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
 
 ### 5. 约09-01 → 09-30：主观题
 
@@ -41,7 +41,7 @@
 - 必须动笔翻译或写作文，以免在考场上无法下笔。
 - 练好衡水体（作文多2-4分）。
 
-在3月到8月期间，如果每天花2h学习英语，在完成既定任务的情况下，还剩很多时间。对于主观题的学习，你可以参考其ta人的经验，比如[BenLucas](https://www.zhihu.com/people/lucas-antony)。虽然我在主观题上花了时间，但完全是因为太闲了。我个人觉得花不花那些时间无所谓，因为主观题5 + 5 + 10确实很容易。
+在3月到8月期间，如果每天花2h学习英语，在完成既定学习任务的情况下，还剩很多时间。对于主观题的学习，你可以参考其ta人的经验，比如[BenLucas](https://www.zhihu.com/people/lucas-antony)。虽然我在主观题上花了时间，但完全是因为太闲了。我个人觉得花不花那些时间无所谓，因为主观题5 + 5 + 10确实很容易。
 
 ### 6. 约10-01 → 10-31：近10年真题
 
@@ -73,7 +73,7 @@
 - 学习能力和执行能力因人而异，请根据自身情况稍作调整。
 - 盗版课程和书籍满天飞。大家可以先找盗版课程听一听、盗版书籍看一看，别花冤枉钱。如果认为物有所值且经济实力允许，请支持正版。
 - 关于本文的时效性：方法论过时得很快，因为考纲变，书目变，课程也变。我个人建议你结合“下篇：考研杂谈”DIY自己的备考方案。在理解了下篇之后，你可以基于上篇的模板，修改其中的细节。
-- 对于上海地区，如果目标仅~75，建议放弃作文，因为准备作文的性价比极低。只要客观题足够高，考~75不难。
+- 对于上海地区，如果目标仅\~75，建议放弃作文，因为准备作文的性价比极低。只要客观题足够高，考\~75不难。
 
 ## 附录：欧路词典
 
@@ -91,13 +91,13 @@
 
 ![1-2-a-2-201-2021-excerpt.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/1-2-a-2-201-2021-excerpt.jpeg)
 
-以2021考研英语一为例：
+以2021考研英语一的第1篇阅读理解为例：
 
-> 但是，在过去的12个月里，这些commuter已经经历了这些年最糟糕的rail strike。最近一波strike的责任rest on工会。但是，这是一个强有力的例子。那些最受industrial action不良影响的人，应该收到他们所经历的disruption的compensation。
+> 但是，在过去的12个月里，这些commuter已经经历了这些年最糟糕的rail strike。最近一波strike的责任rest on工会。但是，这是一个强有力的例子。那些最受industrial action不良影响的人，应该收到ta们所经历的disruption的compensation。
 >
 > ……
 >
-> 问题：作者hold，这一年rail passenger费用的增加____。
+> Q21：作者hold，这一年rail passenger费用的增加____。
 >
 > A. 将减轻列车operator的负担
 >
@@ -107,12 +107,9 @@
 
 ### 3. 考研生词本
 
-**第1步**：比对译文，为不认识的、理解错误的单词或词组标注**词性**和**中文释义**。
+**第1步**：比对译文，为不认识的、理解错误的单词（含词组，下同）标注词性和中文释义。
 
-**第2步**：将单词或词组加入考研生词本，并根据词频赋予对应的星级。我的评级方式如下，供大家参考。你也可以将2000词一级调整为3000词一级。
-
-- 前缀或后缀一律5星。
-- 词组一律1星。
+**第2步**：将单词加入考研生词本，并根据词频赋予对应的星级。我的评级方式如下，供大家参考。
 
 1. RANK 1-2000为5星
 2. RANK 2001-4000为4星
@@ -120,18 +117,22 @@
 4. RANK 6001-8000为2星
 5. RANK ＞8000为1星
 
+> 词组一律1星。
+
+你也可以将2000词一级调整为3000词一级。
+
 ![1-2-a-3-sound.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/1-2-a-3-sound.jpeg)
 
 ### 4. 背诵
-
-如果可以说出该单词在考研生词本中的意思，选认识；如果不能，选不认识。
 
 将学习计划设置为一个无法完成的目标，比如500个。每天背诵考研生词本0.5h（具体的背诵时长可根据英语基础和目标自行调整）。
 
 ![1-2-a-4-plan.jpeg](https://github.com/Anticorianderist/kaoyan/blob/main/2-spt/figures/1-2-a-4-plan.jpeg)
 
+如果可以说出单词在考研生词本中的意思，选认识；如果不能，选不认识。
+
 ### 5. 循环
 
-在背诵完一遍后，遍历考研生词本A的所有单词或词组，将已掌握的单词或词组移至另一个新建的考研生词本B。反复“背诵、遍历、转移”考研生词本A，直至所有单词或词组转移到考研生词本B。
+**第1步**：在背诵完一遍之后，遍历考研生词本A的所有单词，将已掌握的单词移至另一个新建的考研生词本B。循环“背诵、遍历、转移”考研生词本A，直至所有单词转移到考研生词本B。
 
-把“满了”的考研生词本B当作考研生词本A，把“空了”的考研生词本A当作考研生词本B，循环转移多遍。如果你认为某些单词已经滚瓜烂熟了，可以在某个阶段结束之后删减一次考研生词本。
+**第2步**：把“满了”的考研生词本B当作考研生词本A、“空了”的考研生词本A当作考研生词本B，重复第1步。在考研生词本A和考研生词本B互换了多次之后，如果你认为很多单词已经滚瓜烂熟了，可以不定期删减考研生词本。
