--- a/1-src/1-methodologies/4-408.md
+++ b/1-src/1-methodologies/4-408.md
@@ -13,7 +13,7 @@
 
 ## 0x02 方法论
 
-- **核心原则**：王道单科书 + 真题，2遍120、3遍130。
+- **核心原则**：王道单科书 + 真题，2遍120+、3遍130+。
 - **备考过程**：以“DS → 计组 → OS → 计网”的顺序，刷完王道单科书；以年份递增的顺序，刷完真题。反复执行以上过程。
 
 ### 1. 王道单科书
@@ -33,16 +33,16 @@
 
 - 第1遍：做不动综合题很正常，不需要在意分数。在订正的时候，将每道综合题当作例题，认认真真地学一遍。
 - 第2遍：在第1遍真题和第2遍王道单科书的洗礼下，总分应该不低于120分。若低于120分，有必要反省一下自己的学习状态。
-- 第3遍：总分应该不低于140分。若低于140分，有必要反省一下自己的学习效果。
+- 第3遍：总分应该不低于140分。若低于140分，有必要反省一下自己的学习状态。
 - 近五年真题：12月进行5场模考，总分应该不低于135分（学了2遍）或145分（学了3+遍）。
 
 ### 3. 其它
 
 - **综合题**：除了上述学习任务，还有必要系统地总结408的大题。例如，某个周末总结一下历年DS的算法题（其它大题亦同）。408大题的特色是恶心，尤其计组。但是，只要认真地做3遍以上，解题思路还是非常固定的。
-- **参考教材**：如果尚在大一大二，我建议你好好地学一遍四大基础课（参考[CS DIY](https://csdiy.wiki/)）。但是，即使你零基础，考研期间不需要对着“指定教材”学一遍。关于“指定教材”和“黑皮书系列”，我将在“考研杂谈：学习曲线”中详述。甩一个简单粗暴的结论，看到别人使用严蔚敏、唐朔飞等人的所谓“指定教材”备考，你就偷着乐吧。
-- **王道/8套模拟卷**：如果你的执行力不错，完成3遍“王道单科书 + 真题”（第1轮不超过三个月；第2+轮不超过两个月），不说绰绰有余，学有余力应该不成问题。所谓学有余力，等于可以腾出时间精力折腾其它学习材料。对于王道的8套模拟卷，你可以模考8次，但12月必须通过近五年真题的5场模考重拾题感。说实话，王道模拟卷的质量很差（因为不可能存在哪个辅导机构拥有考研命题组级别的阵容），和王道单科书的综合题一样，既不像真题，也押不中考点。王道模拟卷最大的优点是简单，动辄135+甚至140+，可以让你信心倍增。
-- **王道/考点分析（王道的真题解析/附赠）**：反复地看，把它当成是一份完美的真题笔记。你甚至可以不断地完善它。比如，在旁边的空白处写上每个考点对应的题号和总分值（考频）、缺漏的知识点。
-- **王道/思维导图**：比较鸡肋，12月可以从王道单科书转向思维导图，查缺补漏。对知识点的脑补能力越强，学习效果越好，否则即为缺漏。
+- **参考教材**：如果尚在大一大二，我建议你参考[CS DIY](https://csdiy.wiki/)，好好地学一遍四大基础课。但是，即使你零基础，考研期间也不需要对着“参考教材”学一遍。
+- **王道/模拟卷**：如果你的执行力不错，完成3遍“王道单科书 + 真题”（第1轮不超过三个月；第2+轮不超过两个月）学有余力，即“可以腾出时间精力学习其它学习材料”。对于王道的模拟卷，你可以用来模考，但12月必须通过近五年真题的5场模考重拾题感。
+- **王道/考点分析**：把它当成是一份优秀的真题笔记，反复地看。你还可以不断地完善它，比如“在旁边的空白处写上每个考点对应的题型和考频”。
+- **王道/思维导图**：12月可以从王道单科书转向思维导图，查缺补漏。
 
 ## 0x03 补充
 
