--- a/1-src/1-methodologies/3-301.md
+++ b/1-src/1-methodologies/3-301.md
@@ -90,13 +90,13 @@
 
 ### 2. 试卷
 
-先回答模考阶段最核心的问题：如何改进某场考试？
+先回答模考阶段最核心的问题：**如何改进某场考试**？
 
 1. 看≈、≠、≡分别对应多少分。例如，你死磕一道≡，浪费了太多时间，以致于无法做完简单题（相当于≈，原本可以拿到的分数，没有拿到）。为此，你需要改进考试的时间分配。
 2. 假如你及时地跳过了难题，“≈、≠、≡”所失去的分数仍然不可接受，如何在有限的备考时间中以最大速率提高分数？例如，≈15分、≠20分、≡15分。对此，你应该先将≈控制在5分以内、再将≠控制在5分以内、最后减少≡所失去的分数。
 3. 如何控制“≈、≠、≡”的分数？许多做题人存在瓶颈，在分数达到了临界值之后，难以晋级下一个段位。这是数学之外的问题。例如，控制≈依赖于“做题流程（交叉检验）、做题习惯（草稿本是否工整）、做题心态（在考场上最大限度地保证执行力）”。纠错笔记写得越好，“≈、≠、≡”的分数越低。在经过几十场模考的洗礼之后，分数基本收敛了。
 
-针对“3类错误”：
+**针对“3类错误”**：
 
 - ≈：保证考试策略足以做完所有简单题和中档题；绝大部分选择题可以“正选”和“反选”，不应该出现失误；所有填空题必须检查一遍；养成好的做题习惯，比如工整的草稿本、以惯用的标记圈圈划划。做好以上四点，将≈控制在5分以内不难。
 - ≠：重新学习一遍相应的知识点及其上下游知识点；多刷题以加深理解。
