--- a/1-src/1-methodologies/2-201.md
+++ b/1-src/1-methodologies/2-201.md
@@ -48,7 +48,7 @@
 以2天为一个周期。第1天：模考3h；第2天：失分报告1h。
 
 - **模考**：小作文 → 大作文 → 阅读理解 → 新题型 → 完形填空 → 翻译。掐表做题，没做完就没做完。
-- **失分报告**：在1h内总结，没写完就没写完。在10月之前，必须确定一个相对稳定的目标总分以及每种题型的目标小分。基于此，微调目标总分在每种题型上的分配。在每种题型的目标小分已经相对稳定之后，无视已达标题型的失分，写未达标题型的错因和纠错笔记即可。例如，完形填空目标6分，而完形填空的模考分数8分；阅读理解目标36分，而阅读理解的模考分数30分。在上述情况中，完形填空属于已达标题型；阅读理解属于未达标题型。在下次模考之前，看一下上次模考的失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
+- **失分报告**：在1h内总结，没写完就没写完。在10月之前，必须确定一个相对稳定的目标总分以及每种题型的目标小分（见《下篇：考研杂谈/1 目标》的第3节）。基于此，微调目标总分在每种题型上的分配。在每种题型的目标小分已经相对稳定之后，无视已达标题型的失分，写未达标题型的错因和纠错笔记即可。例如，完形填空目标6分，而完形填空的模考分数8分；阅读理解目标36分，而阅读理解的模考分数30分。在上述情况中，完形填空属于已达标题型；阅读理解属于未达标题型。在下次模考之前，看一下上次模考的失分报告。平时有事没事多翻一翻，也可以整块时间系统地分析。
 
 ### 7. 约11-01 → 11-30：近10年真题
 
