--- a/1-src/1-methodologies/3-301.md
+++ b/1-src/1-methodologies/3-301.md
@@ -21,12 +21,12 @@
 在07-31之前，学完1遍考研数学。
 
 - **“学完”的标准**：可以看懂考试大纲的所有名词和相关叙述。
-- **学习材料**：因人而异。我个人的建议是，“你可以先试一试，再选择最适合自己的学习资料。一般来说，视频资料对学习效率的影响比较大，其原因包括但不限于“信息密度低”、“某些老师擅长营造‘你学到了很多’等错觉”；文本资料对学习效率的影响比较小。
+- **学习材料**：因人而异。我个人的建议是，“你可以先试一试，再选择最适合自己的学习材料。一般来说，视频资料对学习效率的影响比较大，其原因包括但不限于“信息密度低”、“某些老师擅长营造‘你学到了很多’等错觉”；文本资料对学习效率的影响比较小。
   - **基础差**：我建议，复习全书 + 李王系列的三本辅导讲义。
   - **基础好**：我建议，跳过复习全书，从李王系列的三本辅导讲义开始。
 - **如何学**：该听课听课、该看书看书、该看例题看例题、该做练习题做练习题，从头到尾过一遍学习材料，问自己是否达到了“学完”的标准。如果“学完”了，提前进入下一个环节；如果没有“学完”，要么再学一遍不达标的章节，要么从头到尾再学一遍。
 
-> 如果教辅圈发生变动，比如辅导讲义这套资料已经没有了，你可以使用往年的辅导讲义，因为考研数学在考试内容上无法革新。它可以改变的部分只有难度和试卷结构。至于考试内容的微调，你完全可以独立地补学考试大纲的新增内容。如果你找不到往年的辅导讲义，使用类似的学习资料替代即可。
+> 如果教辅圈发生变动，比如辅导讲义这套资料已经没有了，你可以使用往年的辅导讲义，因为考研数学在考试内容上无法革新。它可以改变的部分只有难度和试卷结构。至于考试内容的微调，你完全可以独立地补学考试大纲的新增内容。如果你找不到往年的辅导讲义，使用类似的学习材料替代即可。
 
 所谓基础，指的是“关于考研数学的所有知识点”。在基础阶段，你需要掌握考研数学的脉络，足以在开卷的情况下看懂任何一道题的解题过程。例如，某道题考曲率。你没记住曲率的计算公式，也推导不出来，但你至少应该在开卷的情况下做出那道题。在基础阶段之后，你不应该存在任何知识点盲区。
 
